QuizRecord nightly testing OK
- Add routes
- Update swagger
- Basic nightly test OK
