# resources/swaggerDocs.json
@@ -17,11 +17,15 @@
   "tags": [
     {
       "name": "quiz",
-      "description": "Basic info about quizzes"
+      "description": "Represent a roll call session"
     },
     {
       "name": "class",
-      "description": "Basic info about classes"
+      "description": "Class informations"
+    },
+    {
+      "name": "quizRecord",
+      "description": "Object to store student's attempt to register a roll call"
     }
   ],
   "components": {
@@ -91,6 +95,31 @@
             "type": "integer",
             "minimum": 0,
             "default": 50
+          },
+          "note": {
+            "type": "string",
+            "default": "A note"
+          }
+        }
+      },
+      "QuizRecord": {
+        "type": "object",
+        "properties": {
+          "quiz": {
+            "type": "string",
+            "default": "645d04485aa78ee9ac47e189"
+          },
+          "studentId": {
+            "type": "string",
+            "default": "20001234"
+          },
+          "studentName": {
+            "type": "string",
+            "default": "Nguyễn Văn A"
+          },
+          "isValid": {
+            "type": "boolean",
+            "default": true
           },
           "note": {
             "type": "string",
@@ -466,6 +495,193 @@
                     },
                     {
                       "$ref": "#/components/schemas/Class"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/quizRecords": {
+      "get": {
+        "tags": ["quizRecord"],
+        "summary": "Get all quizzes",
+        "description": "Return all quizzes",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "allOf": [
+                      {
+                        "$ref": "#/components/schemas/DefaultMongo"
+                      },
+                      {
+                        "$ref": "#/components/schemas/QuizRecord"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["quizRecord"],
+        "summary": "Create new quizRecord",
+        "description": "Return new quizRecord created",
+        "parameters": [],
+        "requestBody": {
+          "description": "New quizRecord's values",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/QuizRecord"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/DefaultMongo"
+                    },
+                    {
+                      "$ref": "#/components/schemas/QuizRecord"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/quizRecords/{id}": {
+      "get": {
+        "tags": ["quizRecord"],
+        "summary": "Get quizRecord by id",
+        "description": "Return single quizRecord",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of quizRecord to return",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "645d04485aa78ee9ac47e189"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/DefaultMongo"
+                    },
+                    {
+                      "$ref": "#/components/schemas/QuizRecord"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": ["quizRecord"],
+        "summary": "Update quizRecord by id",
+        "description": "Return single quizRecord before update",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of quizRecord to return",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "645d04485aa78ee9ac47e189"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "QuizRecord's updated values",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/QuizRecord"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/DefaultMongo"
+                    },
+                    {
+                      "$ref": "#/components/schemas/QuizRecord"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["quizRecord"],
+        "summary": "Delete quizRecord by id",
+        "description": "Return deleted quizRecord",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of quizRecord to return",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "645d04485aa78ee9ac47e189"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/DefaultMongo"
+                    },
+                    {
+                      "$ref": "#/components/schemas/QuizRecord"
                     }
                   ]
                 }
